New key feature, pbo_name_prefix, and some P: drive safety

--- a/make.cfg
+++ b/make.cfg
@@ -32,6 +32,9 @@ project = @my_project
 # Directory where the built addon will be saved.
 # release_dir = release
 
+# This string will be prefixed to all build PBO file names.
+# pbo_name_prefix = myproject_
+
 # Which build tool will be used? Options: pboproject, addonbuilder
 # build_tool = pboproject
 
