--- a/make.cfg
+++ b/make.cfg
@@ -9,33 +9,42 @@
 
 # Project name (with @ symbol)
 # This is used for naming the release files.
-project = @my_project
+# Default: Current folder name
+# project = @my_project
 
 # Path to project secret key for signing
 # Make sure this isn't in your public repository!
+# Default: None
 # key = C:\Keys\mykey.biprivatekey
 
 # If set to True, the make system will attempt to autodetect addons in the
 # current folder by looking for directories with 'config.cpp' in them.
+# Default: True
 # module_autodetect = True
 
 # List of directories to ignore when autodetecting addons.
+# Default: release
 # ignore = release, my_unfinished_module
 
 # If autodetect is set to False, only folders whose names are in this list
 # will be built as modules.
+# Default: None
 # modules = my_module, my_supporting_module
 
-# This is the folder hierarchy that will be used as prefix in
+# This is the folder hierarchy that will be used as prefix inside the PBO.
+# Default: None
 # prefix = x\my_project\addon
 
 # Directory where the built addon will be saved.
+# Default: release
 # release_dir = release
 
 # This string will be prefixed to all build PBO file names.
+# Default: None
 # pbo_name_prefix = myproject_
 
 # Which build tool will be used? Options: pboproject, addonbuilder
+# Default: pboproject
 # build_tool = pboproject
 
 ##################################################################
