Addon Builder support, $NOBIN$ for Addon Builder, misc fixes

--- a/make.cfg
+++ b/make.cfg
@@ -44,8 +44,8 @@
 # pbo_name_prefix = myproject_
 
 # Which build tool will be used? Options: pboproject, addonbuilder
-# Default: pboproject
-# build_tool = pboproject
+# Default: addonbuilder
+# build_tool = addonbuilder
 
 ##################################################################
 # Alternate build target using a different key
