Yet another massive refactor. Addon Builder support dropped

--- a/make.cfg
+++ b/make.cfg
@@ -12,6 +12,11 @@
 # Default: Current folder name
 # project = @my_project
 
+# Project root.
+# This is the directory used as the root when building the PBO (for prefixes, etc.)
+# Default: Directory containing make.py
+# project_root = P:\x\my_project\
+
 # Path to project secret key for signing
 # Make sure this isn't in your public repository!
 # Default: None
@@ -19,33 +24,33 @@
 
 # If set to True, the make system will attempt to autodetect addons in the
 # current folder by looking for directories with 'config.cpp' in them.
+# It will also search in the subdirectories 'modules' and 'addons' if they 
+# exist.
 # Default: True
-# module_autodetect = True
+# module_autodetect = False
 
 # List of directories to ignore when autodetecting addons.
-# Default: release
-# ignore = release, my_unfinished_module
+# Paths must be relative to project_root.
+# Default: None
+# ignore = test
 
 # If autodetect is set to False, only folders whose names are in this list
-# will be built as modules.
+# will be built as modules. Paths must be relative to project_root.
 # Default: None
-# modules = my_module, my_supporting_module
+# modules = my_module, z\prefix\my_supporting_module
 
-# This is the folder hierarchy that will be used as prefix inside the PBO.
-# Default: None
-# prefix = x\my_project\addon
-
-# Directory where the built addon will be saved.
-# Default: release
-# release_dir = release
+# Directory where the built addon will be saved. This is an absolute
+# path.
+# Default: 'release' in make.py's directory
+# release_dir = P:\built_addons
 
 # This string will be prefixed to all build PBO file names.
 # Default: None
 # pbo_name_prefix = myproject_
 
 # Which build tool will be used? Options: pboproject, addonbuilder
-# Default: addonbuilder
-# build_tool = addonbuilder
+# Default: pboproject
+# build_tool = pboproject
 
 ##################################################################
 # Alternate build target using a different key
