New module_root make.cfg behavior

--- a/make.cfg
+++ b/make.cfg
@@ -17,6 +17,12 @@
 # Default: Directory containing make.py
 # project_root = P:\x\my_project\
 
+# Module root.
+# This is the directory containing the folders with addon content (config.cpp, etc.)
+# inside of them. It must be under the project root.
+# Default: Project root
+# module_root = ..\addons\
+
 # Path to project secret key for signing
 # Make sure this isn't in your public repository!
 # Default: None
